force-app/main/default/objects/Product2/fields/AnioModelo__c.field-meta.xml
<CustomField>
    <fullName>AnioModelo__c</fullName>
    <description>Año del modelo del producto</description>
    <label>Año Modelo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>