force-app/main/default/objects/Product2/fields/Aniovehiculo__c.field-meta.xml
<CustomField>
    <fullName>Aniovehiculo__c</fullName>
    <description>Año del modelo del vehículo</description>
    <label>Año vehículo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>