force-app/main/default/objects/Product2/fields/C_digo_QR__c.field-meta.xml
<CustomField>
    <fullName>C_digo_QR__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=https://cs87.salesforce.com/&apos;&amp;Id ,&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código QR</label>
    <type>Text</type>
</CustomField>