force-app/main/default/objects/Product2/fields/Codigocolorexterno__c.field-meta.xml
<CustomField>
    <fullName>Codigocolorexterno__c</fullName>
    <description>Codigo del color externo del producto</description>
    <label>Codigo color externo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>