force-app/main/default/objects/Product2/fields/Codigocolorinterno__c.field-meta.xml
<CustomField>
    <fullName>Codigocolorinterno__c</fullName>
    <description>Codigo del color interno del producto</description>
    <label>Codigo color interno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>