force-app/main/default/objects/Product2/fields/codigomarca__c.field-meta.xml
<CustomField>
    <fullName>codigomarca__c</fullName>
    <label>Codigo marca</label>
    <length>10</length>
    <type>Text</type>
</CustomField>