force-app/main/default/objects/Product2/fields/Codigomodelofabrica__c.field-meta.xml
<CustomField>
    <fullName>Codigomodelofabrica__c</fullName>
    <description>Codigo del modelo de fabrica de producto</description>
    <label>Codigo modelo fabrica</label>
    <length>30</length>
    <type>Text</type>
</CustomField>