force-app/main/default/objects/Product2/fields/Codigomodelogenerico__c.field-meta.xml
<CustomField>
    <fullName>Codigomodelogenerico__c</fullName>
    <description>Descripcion del modelo generico del producto</description>
    <label>Codigo modelo generico</label>
    <length>30</length>
    <type>Text</type>
</CustomField>