force-app/main/default/objects/Product2/fields/Codigovehiculo__c.field-meta.xml
<CustomField>
    <fullName>Codigovehiculo__c</fullName>
    <description>Codigo visible del vehiculo</description>
    <label>Codigo vehiculo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>