force-app/main/default/objects/Product2/fields/Colorexterno__c.field-meta.xml
<CustomField>
    <fullName>Colorexterno__c</fullName>
    <description>Nombre del color externo del producto</description>
    <label>Color externo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>