force-app/main/default/objects/Product2/fields/Colorinterno__c.field-meta.xml
<CustomField>
    <fullName>Colorinterno__c</fullName>
    <description>Nombre del color interno del producto</description>
    <label>Color interno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>