force-app/main/default/objects/Product2/fields/Especificaciones__c.field-meta.xml
<CustomField>
    <fullName>Especificaciones__c</fullName>
    <description>Especificaciones del producto</description>
    <label>Especificaciones</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>