force-app/main/default/objects/Product2/fields/Marca_P__c.field-meta.xml
<CustomField>
    <fullName>Marca_P__c</fullName>
    <description>Marca relacionada a objeto Productos</description>
    <label>Marca (P)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>.</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>Jmc</fullName>
                <label>JMC</label>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>SsangYong</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>