force-app/main/default/objects/Product2/fields/modelofabrica__c.field-meta.xml
<CustomField>
    <fullName>modelofabrica__c</fullName>
    <description>Nombre del modelo de fabrica del producto</description>
    <label>Modelo fabrica</label>
    <length>30</length>
    <type>Text</type>
</CustomField>