force-app/main/default/objects/Product2/fields/modelogenerico__c.field-meta.xml
<CustomField>
    <fullName>modelogenerico__c</fullName>
    <label>Modelo generico</label>
    <length>250</length>
    <type>Text</type>
</CustomField>