force-app/main/default/objects/Product2/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>ProductCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>