force-app/main/default/objects/Product2/recordTypes/Genesis.recordType-meta.xml
<RecordType>
    <fullName>Genesis</fullName>
    <active>true</active>
    <label>Genesis</label>
</RecordType>