force-app/main/default/objects/Product2/recordTypes/Hero.recordType-meta.xml
<RecordType>
    <fullName>Hero</fullName>
    <active>true</active>
    <label>Hero</label>
</RecordType>