force-app/main/default/objects/Product2/recordTypes/Hino.recordType-meta.xml
<RecordType>
    <fullName>Hino</fullName>
    <active>true</active>
    <label>Hino</label>
</RecordType>