force-app/main/default/objects/Product2/recordTypes/JMC.recordType-meta.xml
<RecordType>
    <fullName>JMC</fullName>
    <active>true</active>
    <label>JMC</label>
</RecordType>