force-app/main/default/objects/Product2/recordTypes/Kia.recordType-meta.xml
<RecordType>
    <fullName>Kia</fullName>
    <active>true</active>
    <label>Kia</label>
</RecordType>