force-app/main/default/objects/Product2/recordTypes/Suzuki.recordType-meta.xml
<RecordType>
    <fullName>Suzuki</fullName>
    <active>true</active>
    <label>Suzuki</label>
</RecordType>