force-app/main/default/objects/Product2/recordTypes/Toyota.recordType-meta.xml
<RecordType>
    <fullName>Toyota</fullName>
    <active>true</active>
    <label>Toyota</label>
</RecordType>