force-app/main/default/objects/Product2/recordTypes/Yamaha.recordType-meta.xml
<RecordType>
    <fullName>Yamaha</fullName>
    <active>true</active>
    <label>Yamaha</label>
</RecordType>