force-app/main/default/objects/Product2/listViews/Productos_Autolote.listView-meta.xml
<ListView>
    <fullName>Productos_Autolote</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Marca_P__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.DESCRIPTION</field>
        <operation>equals</operation>
        <value>PRODUCTO DE AUTOLOTE</value>
    </filters>
    <label>Productos Autolote</label>
    <sharedTo>
        <group>Gerencia_Avaluo</group>
    </sharedTo>
</ListView>